--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@faircrypto/vmpx": "^0.1.1",
     "@faircrypto/xen-crypto": "^0.6.1",
-    "@faircrypto/xenft": "^0.5.0",
+    "@faircrypto/xen-stake": "^0.1.1",
+    "@faircrypto/xenft": "^0.5.1",
     "@openzeppelin/contracts": "^4.7.3"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.3.1",
     "ganache-time-traveler": "^1.0.16",
+    "hardhat": "^2.19.1",
     "husky": "^8.0.3",
     "truffle-assertions": "^0.9.2",
     "truffle-plugin-verify": "^0.6.6"
